# tp2-sds-2026Q1G01S2

./: .gitignore  README.md  generate_all.sh  pyproject.toml  tree.txt
docs/: 2026-03-13_Auditoria_Fases_0_1_v1.md  Plan_Implementacion_TP2_OVITO.md  Runbook_Ejecucion_Final_TP2.md
src/tp2_sds/: __init__.py  analysis.py  cli.py  config.py  deliverables.py  io_extxyz.py  reporting.py  simulation.py
tests/: test_analysis.py  test_cli.py  test_config.py  test_deliverables.py  test_io_extxyz.py  test_reporting.py  test_simulation.py
