[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tp2-sds"
version = "0.1.0"
description = "TP2 base package with OVITO-ready trajectory generation and analysis."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "matplotlib>=3.8,<4",
  "numpy>=1.26,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]

[project.scripts]
tp2-sds = "tp2_sds.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
